...
    private let profileImage: UIImageView = {
        let image = UIImage(named: "profileImage")
        
        return UIImageView(image: image)
    }()
    
    private let logoutButton: UIButton = {
        let button = UIButton()
        button.setImage(UIImage(named: "logoutButton"), for: .normal)
        button.addTarget(nil, action: #selector(logout), for: .touchUpInside)
        return button
    }()
    
...
